--- a/recipes/chicken-mushroom.html
+++ b/recipes/chicken-mushroom.html
@@ -1,1 +1,55 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="../index.html">Home</a>
+    <h1>Chicken Mushroom</h1>
+    <img src="https://www.allrecipes.com/thmb/p3r8-u9xyB8xVEgIVd8_ebr1OEg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Cheesy-Chicken-and-Mushroom-Bake-Yoly-4x3-1-2000-f7910185d4894eb7b93177a028657ea8.jpg"
+        alt="Chicken Mushroom Plate Image">
+        <h2>Description</h2>
+        <p>Creamy chicken recipes are some of my readers’ favorites, and it’s easy to see why. I like to keep them simple with no fancy ingredients, and this creamy mushroom chicken is no exception. <br>
+             It’s ready in just 30 minutes for an upgraded family meal.</p>
+        <p>Juicy mushrooms and chicken just go together so well, and pairing them with a garlic cream sauce takes it over the top. <br>
+             Pantry essentials are transformed into a winning dish that’s special enough for company, <br>
+             but go ahead and eat it any old weeknight!</p>
+             <h2>Ingredients</h2>
+             <ul>
+                <li>Salt and ground black pepper to taste</li>
+                <li>4 skinless, boneless chicken breasts</li>
+                <li>2 tablespoons unsalted butter</li>
+                <li>1 ½ cups sliced fresh mushrooms</li>
+                <li>½ cup diced onion</li>
+                <li>2 cloves garlic, chopped</li>
+                <li>1 tablespoon all-purpose flour</li>
+                <li>½ cup chicken broth</li>
+                <li>1 cup grated Parmesan cheese</li>
+                <li>½ cup shredded mozzarella cheese, or to taste</li>
+                <li>½ cup diced scallions</li>
+              </ul>
+              <h2>Directions</h2>              
+              <ol>
+                <li>
+                  <strong>Step 1:</strong> Preheat the oven to 375 degrees F (190 degrees C). Grease a baking dish lightly.
+                </li>
+                <li>
+                  <strong>Step 2:</strong> Sprinkle salt and pepper on chicken. Heat butter in a pan over medium-high heat. Add chicken and brown on all sides, 5 to 7 minutes. Remove chicken and place in the prepared baking dish.
+                </li>
+                <li>
+                  <strong>Step 3:</strong> Stir mushrooms, onion, garlic, and flour into the remaining butter in the saucepan and saute over medium-high heat until softened, about 5 minutes. Add chicken broth and bring to a boil while scraping the "good stuff" off of the bottom of the saucepan, letting it add to the flavor. Cook until thickened to your liking; drizzle over chicken.
+                </li>
+                <li>
+                  <strong>Step 4:</strong> Bake in the preheated oven for 30 minutes. Sprinkle with Parmesan cheese, mozzarella cheese, and scallions. Continue to bake until chicken is no longer pink in the center and cheese is melted, about 10 minutes more. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).
+                </li>
+              </ol>    
+              <h2>More Recipes</h2>   
+              <ul>
+                <li><a href="recipes/creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
+                <li><a href="recipes/creamy-garlic-shrimp">Creamy Garlic Shrimp</a></li>
+                <li><a href="recipes/lemon-herb-salmon">Lemon Herb Salmon</a></li>
+              </ul>                   
+</body>
+</html>
