--- a/recipes/creamy-garlic-shrimp.html
+++ b/recipes/creamy-garlic-shrimp.html
@@ -36,9 +36,9 @@
 
     <h2>More Recipes</h2>   
     <ul>
-        <li><a href="chicken-mushroom.html">Chicken Mushroom</a></li>
-        <li><a href="creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
-        <li><a href="lemon-herb-salmon.html">Lemon Herb Salmon</a></li>
+        <li><a href="/chicken-mushroom.html">Chicken Mushroom</a></li>
+        <li><a href="/creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
+        <li><a href="/lemon-herb-salmon.html">Lemon Herb Salmon</a></li>
     </ul>
 </body>
 </html>
