--- a/recipes/chicken-mushroom.html
+++ b/recipes/chicken-mushroom.html
@@ -47,9 +47,9 @@
               </ol>    
               <h2>More Recipes</h2>   
               <ul>
-                <li><a href=".recipes/creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
-                <li><a href=".recipes/creamy-garlic-shrimp">Creamy Garlic Shrimp</a></li>
-                <li><a href=".recipes/lemon-herb-salmon">Lemon Herb Salmon</a></li>
+                <li><a href="recipes/creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
+                <li><a href="recipes/creamy-garlic-shrimp">Creamy Garlic Shrimp</a></li>
+                <li><a href="recipes/lemon-herb-salmon">Lemon Herb Salmon</a></li>
               </ul>                   
 </body>
 </html>
