--- a/recipes/creamy-tomato-pasta.html
+++ b/recipes/creamy-tomato-pasta.html
@@ -37,9 +37,9 @@
 
     <h2>More Recipes</h2>   
     <ul>
-        <li><a href="/chicken-mushroom.html">Chicken Mushroom</a></li>
-        <li><a href="/creamy-garlic-shrimp.html">Creamy Garlic Shrimp</a></li>
-        <li><a href="/lemon-herb-salmon.html">Lemon Herb Salmon</a></li>
+        <li><a href="recipes/chicken-mushroom.html">Chicken Mushroom</a></li>
+        <li><a href="recipes/creamy-garlic-shrimp.html">Creamy Garlic Shrimp</a></li>
+        <li><a href="recipes/lemon-herb-salmon.html">Lemon Herb Salmon</a></li>
     </ul>
 </body>
 </html>
