--- a/recipes/lemon-herb-salmon.html
+++ b/recipes/lemon-herb-salmon.html
@@ -36,9 +36,9 @@
 
     <h2>More Recipes</h2>   
     <ul>
-        <li><a href="/chicken-mushroom.html">Chicken Mushroom</a></li>
-        <li><a href="/creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
-        <li><a href="/creamy-garlic-shrimp.html">Creamy Garlic Shrimp</a></li>
+        <li><a href="recipes/chicken-mushroom.html">Chicken Mushroom</a></li>
+        <li><a href="recipes/creamy-tomato-pasta.html">Creamy Tomato Pasta</a></li>
+        <li><a href="recipes/creamy-garlic-shrimp.html">Creamy Garlic Shrimp</a></li>
     </ul>
 </body>
 </html>
