Update relative links index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Chicken Mushroom</h1>
-      <a href="recipes/chicken-mushroom.html">Chicken Mushroom</a>
+   <h1>Chicken Mushroom</h1>
+<a href="recipes/chicken-mushroom.html">Chicken Mushroom</a>
+
+<h1>Creamy Tomato Pasta</h1>
+<a href="recipes/creamy-tomato-pasta.html">Creamy Tomato Pasta</a>
+
+<h1>Creamy Garlic Shrimp</h1>
+<a href="recipes/creamy-garlic-shrimp.html">Creamy Garlic Shrimp</a>
+
+<h1>Lemon Herb Salmon</h1>
+<a href="recipes/lemon-herb-salmon.html">Lemon Herb Salmon</a>
+
 </body>
 </html>
